--- a/web/Final/AustDirectory/style.css
+++ b/web/Final/AustDirectory/style.css
@@ -11,5 +11,5 @@
     /* ---------------------------------------
     ##### - PLACE YOUR CUSTOM CSS HERE - #####
     --------------------------------------- */
-    
+    .h-100{height:100%!important;}
     .i-am-centered { margin: auto; max-width: 300px;}
