--- a/web/Final/AustDirectory/style.css
+++ b/web/Final/AustDirectory/style.css
@@ -13,5 +13,22 @@
     --------------------------------------- */
     .h-100{height:100%!important;}
     .i-am-centered { margin: auto; max-width: 300px;}
-    .essence-btn:hover, .essence-btn:focus {
-    background-color: #007bff;}
+    /* Essence Button */
+    .essenceBack-btn {
+      display: inline-block;
+      min-width: 170px;
+      height: 50px;
+      color: #ffffff;
+      border: none;
+      border-radius: 0;
+      padding: 0 40px;
+      text-transform: uppercase;
+      font-size: 12px;
+      line-height: 50px;
+      background-color: #0315ff;
+      letter-spacing: 1.5px;
+      font-weight: 600; }
+      .essence-btn:hover, .essence-btn:focus {
+        color: #ffffff;
+        background-color: #007bff;}
+
