--- a/web/Final/AustDirectory/style.css
+++ b/web/Final/AustDirectory/style.css
@@ -28,7 +28,7 @@
       background-color: #0315ff;
       letter-spacing: 1.5px;
       font-weight: 600; }
-      .essence-btn:hover, .essence-btn:focus {
+      .essenceBack-btn:hover, .essenceBack-btn:focus {
         color: #ffffff;
         background-color: #007bff;}
 
